# Closet-Buddy

./: .gitignore  CT6057NI_Workshop_Week_01.docx  README.md  Task1_Week1_Workshop.ipynb  Task2_Week1_Workshop.ipynb  Task3_Week1_Workshop.ipynb  Week_1_CNN.ipynb  main.py  pyproject.toml  test_api.http
.claude/: settings.local.json
Documents/: Closet Buddy Proposal.docx  ClosetBuddy_Gantt_Outline.csv  Gantt Closet.gantt  Online Gantt 20251225 (2).csv  Online Gantt 20251225.gantt  Premium user.txt  ProposalStructureforFYP202526_91645.docx  Structure.txt  errors.txt  features of fyp.txt
Documents/Meeting Logs/: Log1.docx  Log10.docx  Log11.docx  Log12.docx  Log13.docx  Log14.docx  Log15.docx  Log2.docx  Log3.docx  Log4.docx  Log5.docx  Log6.docx  Log7.docx  Log8.docx  Log9.docx  MeetingLogEntrySheet_5efe1469-b100-4d18-be57-3a34c957e460_91645_.docx
backend/: manage.py
backend/ai_models/classification/: attribute_clip.py  clothing_classification.py  occasion.py  shoe_metadata.py  subcategory.py  weather.py
backend/ai_models/segmentation/: segmentation_utill.py
backend/ai_models/utils/: auth_util.py  color_extraction_util.py
backend/api/: admin.py  metadata_normalization.py  middleware.py  models.py  serializer.py  test_core_features.py  tests.py  urls.py  urls_test.py  views.py  views_test.py
backend/closet_buddy_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md  index.html  package-lock.json  package.json  pubspec.yaml  vite.config.js
frontend/docs/: ARCHITECTURE.md
frontend/lib/: main.dart
frontend/src/: App.css  App.jsx  main.jsx
(+160 files in other folders)
